--- a/LiveFromDAP/src/webdemo/static/style.css
+++ b/LiveFromDAP/src/webdemo/static/style.css
@@ -3,7 +3,7 @@ body{
     padding: 0;
     font-family: 'Roboto', sans-serif;
     width: 100vw;
-    height: 80vh;
+    height: 100vh!important;
 }
 
 #page{
@@ -11,6 +11,14 @@ body{
     font-size: 20px;
     padding: 1%;
     height: 100%;
+}
+
+.red-text{
+    color: red;
+}
+
+.green-text{
+    color: green;
 }
 
 #editor-container{
