--- a/LiveFromDAP/src/webdemo/static/style.css
+++ b/LiveFromDAP/src/webdemo/static/style.css
@@ -62,3 +62,11 @@ body{
 .highlight{
     background-color: #ffff0072;
 }
+
+.carousel .indicators .indicator-item.active {
+    background-color: black!important;
+}
+
+.carousel .indicators .indicator-item {
+    background-color: rgba(0, 0, 0, 0.25)!important;
+}
