--- a/LiveFromDAP/src/webdemo/templates/index.html
+++ b/LiveFromDAP/src/webdemo/templates/index.html
@@ -10,12 +10,14 @@
             <li><a href="/dap/python">Python</a></li>
             <li><a href="/dap/c">C</a></li>
             <li><a href="/dap/java">Java</a></li>
+            <li><a href="/dap/javascript">Javascript</a></li>
         </ul>
         <h3>Go to Stack Viewer</h3>
         <ul>
             <li><a href="/stack/python">Python</a></li>
             <li><a href="/stack/c">C</a></li>
             <li><a href="/stack/java">Java</a></li>
+            <li><a href="/stack/javascript">Javascript</a></li>
         </ul>
     </body>
 </html>
