--- a/LiveFromDAP/src/webdemo/templates/stackexplorer.html
+++ b/LiveFromDAP/src/webdemo/templates/stackexplorer.html
@@ -42,8 +42,8 @@ function foo(a, b){
         <div id="output-container">
             <div id="stack">
                 <div class="row">
-                    <div class="col s12 m6">
-                      <div class="card blue-grey darken-1">
+                    <div style="padding: 20px;padding-top: 0px;">
+                      <div class="card grey darken-3">
                         <div class="card-content white-text">
                           <span class="card-title" id="stack-title">StackFrame #? (line ?, height ?)</span>
                             <p>
