--- a/LiveFromDAP/src/webdemo/templates/index.html
+++ b/LiveFromDAP/src/webdemo/templates/index.html
@@ -19,6 +19,7 @@
             <li><a href="/stack/c">C</a></li>
             <li><a href="/stack/java">Java</a></li>
             <li><a href="/stack/javascript">Javascript</a></li>
+            <li><a href="/stack/pyjs">PyJS</a></li>
         </ul>
     </body>
 </html>
