--- a/LiveFromDAP/src/webdemo/templates/stackexplorer2.html
+++ b/LiveFromDAP/src/webdemo/templates/stackexplorer2.html
@@ -29,6 +29,11 @@ public class Live{
         return a + b;
     }
 }
+{% elif language == 'pyjs' %}
+#@foo(1,2)
+def foo(a, b):
+    t = polyglot.eval("js", "2+2")
+    return a + b + t
 {% elif language == 'c' %}
 //@foo(1,2)
 int foo(int a, int b){
