--- a/LiveFromDAP/src/webdemo/templates/dap.html
+++ b/LiveFromDAP/src/webdemo/templates/dap.html
@@ -34,9 +34,14 @@ def foo(a, b):
     for i in range(0, 5):
         t = polyglotEval("js", "x = x + 1; x")
     return a + b + t
-
-def polyglotEval(i, j):
-    return -1
+{% elif language == 'pexec' %}
+#@foo(1,2)
+def foo(a, b):
+    t = polyglotEval("js", "var x = 1; x")
+    x = a + t
+    for i in range(0, 5):
+        t = polyglotEval("js", "x = x + 1; x")
+    return a + b + t
 {% elif language == 'c' %}
 //@foo(1,2)
 int foo(int a, int b){
