--- a/LiveFromDAP/src/webdemo/templates/dap.html
+++ b/LiveFromDAP/src/webdemo/templates/dap.html
@@ -17,8 +17,20 @@
             <textarea id="editor" name="editor">
 {% if language == 'python' %}
 #@foo(1,2)
+#@foo(1,3)
 def foo(a, b):
-    return a + b
+    t = bar(a)
+    for i in range(0, 5):
+        t = t + 1
+    return a + b + t
+
+#@bar(3)
+#@bar(1)
+def bar(x):
+    r = x * 2
+    return r
+
+
 {% elif language == 'java' %}
 public class Live{
     //@foo(1,2)
