--- a/LiveFromDAP/src/webdemo/templates/dap.html
+++ b/LiveFromDAP/src/webdemo/templates/dap.html
@@ -10,6 +10,11 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <style>
+        .highlight-line {
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
     <div id="page">
