--- a/LiveFromDAP/src/webdemo/templates/stackexplorer.html
+++ b/LiveFromDAP/src/webdemo/templates/stackexplorer.html
@@ -10,14 +10,26 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <style>
+        .highlight-line {
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
     <div id="page">
         <div id="editor-container">
             <textarea id="editor" name="editor">{% if language == 'python' %}
-#@foo(1,2)
+#@foo(1,3)
 def foo(a, b):
-    return a + b
+    t = bar(a)
+    for i in range(0, 5):
+        t = t + 1
+    return a + b + t
+
+def bar(x):
+    r = x * 2
+    return r
 {% elif language == 'java' %}
 public class Live{
     //@foo(1,2)
@@ -69,8 +81,8 @@ function foo(a, b){
                 <!-- slider -->
                 <div class="row">
                     <div class="col s12">
-                        <p class="range-field">
-                            <input type="range" id="stack-range" min="0" max="100" value="0" />
+                        <p id="stack-range" class="range-field">
+{#                            <input type="range" id="stack-range" min="0" max="100" value="0" />#}
                         </p>
                     </div>
                 </div>
