--- a/LiveFromDAP/src/webdemo/templates/dap.html
+++ b/LiveFromDAP/src/webdemo/templates/dap.html
@@ -64,6 +64,19 @@ int foo(int a, int b){
 function foo(a, b){
     return a + b;
 }
+
+{% elif language == 'golang' %}
+func bar(a int) int {
+return a * 2
+}
+
+func foo(a, b int) int {
+t := bar(a)
+for i := 0; i < 5; i++ {
+t = t + 1
+}
+return a + b + t
+}
 {% endif %}
             </textarea>
             <div id="editor-resizer"></div>
