--- a/LiveFromDAP/src/webdemo/templates/dap.html
+++ b/LiveFromDAP/src/webdemo/templates/dap.html
@@ -29,8 +29,6 @@ def foo(a, b):
 def bar(x):
     r = x * 2
     return r
-
-
 {% elif language == 'java' %}
 public class Live{
     //@foo(1,2)
@@ -64,19 +62,20 @@ int foo(int a, int b){
 function foo(a, b){
     return a + b;
 }
+{% elif language == 'go' %}
+package main
 
-{% elif language == 'golang' %}
-func bar(a int) int {
-    return a * 2
+import "fmt"
+//@Foo(1,2)
+func Foo(a int, b int) int {
+    return a + b
 }
 
-func foo(a, b int) int {
-    t := bar(a)
-    for i := 0; i < 5; i++ {
-        t = t + 1
-    }
-    return a + b + t
+func main() {
+    result := Foo(3, 4)
+    fmt.Println(result)
 }
+
 {% endif %}
             </textarea>
             <div id="editor-resizer"></div>
@@ -112,6 +111,7 @@ func foo(a, b int) int {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jsdiff/5.1.0/diff.min.js" integrity="sha512-vco9RAxEuv4PQ+iTQyuKElwoUOcsVdp+WgU6Lgo82ASpDfF7vI66LlWz+CZc2lMdn52tjjLOuHvy8BQJFp8a1A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/python/python.min.js" integrity="sha512-Vs2GKxnxnTQBRW7o2xXZ9A28njjmu5RToS42efiKNEWmikov0inZY522EtGVK5CcVo0M/FQwmXsTfl9skgRnvw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/javascript/javascript.min.js" integrity="sha512-I6CdJdruzGtvDyvdO4YsiAq+pkWf2efgd1ZUSK2FnM/u2VuRASPC7GowWQrWyjxCZn6CT89s3ddGI+be0Ak9Fg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/go/go.min.js"></script>
 <script src="{{ url_for('static', filename='live.js') }}"></script>
 <script src="{{ url_for('static', filename='bret.js') }}"></script>
 <script src="{{ url_for('static', filename='resize.js') }}"></script>
