--- a/LiveFromDAP/src/webdemo/templates/index.html
+++ b/LiveFromDAP/src/webdemo/templates/index.html
@@ -12,6 +12,7 @@
             <li><a href="/dap/java">Java</a></li>
             <li><a href="/dap/javascript">Javascript</a></li>
             <li><a href="/dap/go">Go</a></li>
+            <li><a href="/dap/kotlin">Kotlin</a></li>
             <li><a href="/dap/pyjs">PyJS</a></li>
             <li><a href="/dap/pexec">Pexec</a></li>
         </ul>
