--- a/LiveFromDAP/src/webdemo/templates/dap.html
+++ b/LiveFromDAP/src/webdemo/templates/dap.html
@@ -20,6 +20,56 @@
     <div id="page">
         <div id="editor-container">
             <textarea id="editor" name="editor">
+{% if language == 'python' %}
+@foo(1,2)
+#@foo(1,3)
+def foo(a, b):
+    t = bar(a)
+    for i in range(0, 5):
+        t = t + 1
+    return a + b + t
+
+#@bar(3)
+#@bar(1)
+def bar(x):
+    r = x * 2
+return r
+
+
+{% elif language == 'java' %}
+public class Live{
+    //@foo(1,2)
+    public static int foo(int a, int b){
+        return a + b;
+    }
+}
+{% elif language == 'pyjs' %}
+#@foo(1,2)
+def foo(a, b):
+    t = polyglotEval("js", "var x = 1; x")
+    x = a + t
+    for i in range(0, 5):
+        t = polyglotEval("js", "x = x + 1; x")
+    return a + b + t
+{% elif language == 'pexec' %}
+#@foo(1,2)
+def foo(a, b):
+    t = polyglotEval("js", "var x = 1; x")
+    x = a + t
+    for i in range(0, 5):
+        t = polyglotEval("js", "x = x + 1; x")
+    return a + b + t
+{% elif language == 'c' %}
+//@foo(1,2)
+int foo(int a, int b){
+    return a + b;
+}
+{% elif language == 'javascript' %}
+//@foo(1,2)
+function foo(a, b){
+    return a + b;
+}
+{% endif %}
             </textarea>
             <div id="editor-resizer"></div>
         </div>
