--- a/LiveFromDAP/src/webdemo/templates/dap.html
+++ b/LiveFromDAP/src/webdemo/templates/dap.html
@@ -21,16 +21,17 @@
         <div id="editor-container">
             <textarea id="editor" name="editor">
 {% if language == 'python' %}
-#@foo(1,2)
-#@foo(1,3)
+#@ex1:foo(1,2)
+#@ex2:foo(1,3)
 def foo(a, b):
     t = bar(a)
+    #@ex1:probe(t)
     for i in range(0, 5):
         t = t + 1
     return a + b + t
 
-#@bar(3)
-#@bar(1)
+#@ex3:bar(3)
+#@ex4:bar(1)
 def bar(x):
     r = x * 2
     return r
