Cleaner probe refactor

--- a/LiveFromDAP/src/webdemo/templates/dap.html
+++ b/LiveFromDAP/src/webdemo/templates/dap.html
@@ -28,12 +28,14 @@ def foo(a, b):
     #@ex1:probe(t)
     for i in range(0, 5):
         t = t + 1
+    #@ex1:probe(t)
     return a + b + t
 
 #@ex3:bar(3)
 #@ex4:bar(1)
 def bar(x):
     r = x * 2
+    #@ex2:probe(r)
     return r
 {% elif language == 'java' %}
 public class Live{
