Add support in the web (match closest is WIP)

--- a/LiveFromDAP/src/webdemo/templates/index.html
+++ b/LiveFromDAP/src/webdemo/templates/index.html
@@ -22,5 +22,9 @@
             <li><a href="/stack/javascript">Javascript</a></li>
             <li><a href="/stack/pyjs">PyJS</a></li>
         </ul>
+        <h3>Advanced Agents</h3>
+        <ul>
+            <li><a href="/advanced_python">Advanced Python</a></li>
+        </ul>
     </body>
 </html>
