--- a/LiveFromDAP/src/webdemo/templates/dap.html
+++ b/LiveFromDAP/src/webdemo/templates/dap.html
@@ -25,17 +25,17 @@
 #@ex2:foo(1,3)
 def foo(a, b):
     t = bar(a)
-    #@ex1:probe(t)
+    #@ex1:probe t
     for i in range(0, 5):
         t = t + 1
-        #@ex1:probe(t)
+        #@ex1:probe t if £ t % 2 == 0 £
     return a + b + t
 
 #@ex3:bar(3)
 #@ex4:bar(1)
 def bar(x):
     r = x * 2
-    #@ex2:probe(r)
+    #@ex2:probe t
     return r
 {% elif language == 'java' %}
 public class Live{
