Fix buggy condition example

--- a/LiveFromDAP/src/webdemo/templates/dap.html
+++ b/LiveFromDAP/src/webdemo/templates/dap.html
@@ -35,7 +35,7 @@ def foo(a, b):
 #@ex4:bar(1)
 def bar(x):
     r = x * 2
-    #@ex2:probe t
+    #@ex2:probe r
     return r
 {% elif language == 'java' %}
 public class Live{
